Fix the problem with landing page displaying correctly only the first time that it opens. Removed more whitespace.

--- a/views/index.css
+++ b/views/index.css
@@ -1,6 +1,5 @@
 *{margin:0;padding:0;}
 
-
 header{
     height: 60px;
     width: 100%;
@@ -157,4 +156,11 @@ form {
         background-image: none;
         border: .0625rem solid #ccc;
         border-radius: .25rem;
-    }   
+    }
+
+/*
+LANDING PAGE
+*/
+#landingPage{
+    flex-direction: column;
+}
